@@ -1,3 +1,3 @@
-MD5 72735b17a8be197ab716a3f69140f7c9 xterm-179.ebuild 578
-MD5 2f3d7fe10a6a9e209c76637bed49e142 ChangeLog 606
+MD5 dbc6468d323d1334309b4c0d960ee883 xterm-179.ebuild 810
+MD5 8a8cfde73ea6d34a1401ca455b37c3c9 ChangeLog 811
 MD5 a2579a687debb13d3011931fad6249eb files/digest-xterm-179 58
